--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -1,6 +1,3 @@
-* {
-  font-size:20px;
-}
 .btn {
   // margin-left: 20px;
   // margin-right: 20px;
@@ -8,21 +5,28 @@
 .num {
   // margin-right: 3px;
 }
-.item {
-  height: 44px;
+// .side-nav {
+//   position: fixed;
+//   top: 0;
+//   width: 0;
+//   height: 100%;
+//   overflow-y: auto;
+//   transition: width 0.3s ease;
+//   a {
+//     display: block;
+//     padding: 15px;
+//   }
+// }
+.list {
   width: 100%;
   clear: both;
-  .name {
-    width: 300px;
+  .add {
+    width: 100%;
   }
-  .action {
-    width: 100px;
-  }
-  .delete {
-    width: 100px
-  }
-  div {
-    float:left;
+  .list-group-item {
+    form {
+      display: inline;
+    }
   }
 }
 .home {
