--- a/views/index.jade
+++ b/views/index.jade
@@ -2,11 +2,7 @@ extends layout
 
 block content
   .menu
-    h2 Menu
-    ul.nav.nav-pills
-      li.active
-        a(href="/tasks") Home
-      li
-        a(href="/tasks") Todo List
-      li
-        a(href="/tasks") Completed
+    div.list-group
+        a(href="/tasks", class="list-group-item active") Home
+        a(href="/tasks", class="list-group-item") Todo List
+        a(href="/tasks", class="list-group-item") Completed
