--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,8 @@ html
         title= title + '|' + appname
         link(rel="stylesheet", href="/stylesheets/style.css")
         meta(name="viewport", content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no")
-        link(rel="stylesheet", href="/bootstrap/bootstrap.css")
-        link(rel="stylesheet", href="/stylesheets/main.css")
+        link(rel="stylesheet", href="/styles/css/style.css")
+        link(rel="stylesheet", href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css")
     body
         .container
             .navbar.navbar-default
@@ -14,5 +14,5 @@ html
                         a.navbar-brand(href="/")= appname
             .alert.alert-dismissable
             block content
-    script(src='/javascripts/jquery.js', type="text/javascript")
-    script(src='/javascripts/main.js', type="text/javascript")
+    script(src='/js/jquery.js', type="text/javascript")
+    script(src='/js/main.js', type="text/javascript")
